--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -31,10 +31,9 @@ jobs:
         env:
           VITE_API_URL: https://chat-demo-api-${{ github.head_ref || github.ref_name }}.dev.jbrunton-aws.com
         run: |
-          pnpm install
-          pnpm run build
-        working-directory: client
-      - run: pnpm install
+          pnpm --filter client install
+          pnpm --filter client run build
+      - run: pnpm install --ignore-workspace
         working-directory: pulumi
       - uses: pulumi/actions@v3
         with:
