--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "packageManager": "pnpm@9.8.0",
   "scripts": {
-    "test": "playwright test",
-    "test:ui": "playwright test --ui"
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "keywords": [],
   "author": "",
