--- a/services/api/package.json
+++ b/services/api/package.json
@@ -21,12 +21,11 @@
     "db:test:drop": "NODE_ENV=test ts-node ./scripts/db/drop.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --max-warnings 0",
     "test": "jest",
-    "test:int": "jest --config ./jest.int.config.js",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:mutate": "stryker run",
-    "test:e2e": "jest --config ./test/jest-e2e.config.cjs",
+    "test:int": "jest --config ./test/jest-e2e.config.cjs",
     "docs:generate": "typedoc",
     "docs:serve": "http-server docs"
   },
