--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,8 @@
     },
     "lint": {},
     "test": {},
+    "test:int": {},
+    "test:e2e": {},
     "dev": {
       "cache": false,
       "persistent": true
