--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "turbo lint",
     "test": "turbo test",
     "test:int": "turbo test:int",
+    "test:e2e": "turbo test:e2e",
     "build": "turbo build",
     "dev": "turbo dev"
   },
