--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
       - run: pnpm run test:int
 
   test-e2e:
-    # needs: [lint, test, test-int, pulumi]
+    needs: [lint, test, test-int, pulumi]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
