--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "turbo lint",
     "test": "turbo test",
     "test:int": "turbo test:int",
-    "test:e2e": "turbo test:e2e",
+    "test:e2e": "pnpm run --filter e2e test:e2e",
+    "test:e2e:ui": "pnpm run --filter e2e test:e2e:ui",
     "build": "turbo build",
     "dev": "turbo dev"
   },
