--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,14 +32,8 @@ jobs:
       - run: pnpm run lint
       - run: pnpm run test
 
-  e2e-test:
+  test-int:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        directory: ["services/api"]
-    defaults:
-      run:
-        working-directory: ${{ matrix.directory }}
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v4
@@ -47,14 +41,11 @@ jobs:
         with:
           port: 8001
       - run: pnpm install
-      - run: pnpm run test:e2e
+      - run: pnpm run test:int
 
-  playwright:
-    needs: [lint, test, e2e-test, pulumi]
+  test-e2e:
+    needs: [lint, test, test-int, pulumi]
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: e2e
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v4
@@ -62,15 +53,15 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: pnpm install --ignore-workspace
+        run: pnpm install
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: pnpm exec playwright install --with-deps
+        working-directory: e2e
       - uses: rrainn/dynamodb-action@v2.0.1
         with:
           port: 8000
       - name: Start services
         run: |
-          pnpm install
           pnpm run --filter api db:init
           pnpm run dev &
         working-directory: .
@@ -88,6 +79,7 @@ jobs:
           USER1_PASSWORD: ${{ secrets.TEST_USER1_PASSWORD }}
           USER2_EMAIL: ${{ secrets.TEST_USER2_EMAIL }}
           USER2_PASSWORD: ${{ secrets.TEST_USER2_PASSWORD }}
+        working-directory: e2e
       - name: Wait for services
         run: |
           npx --yes wait-on http://localhost:3000
@@ -95,7 +87,7 @@ jobs:
           # https://github.com/jeffbski/wait-on/issues/78
           npx --yes wait-on tcp:5173
       - name: Run Playwright tests
-        run: npx playwright test
+        run: pnpm run test:e2e
       - uses: actions/upload-artifact@v3
         if: always()
         with:
@@ -105,7 +97,7 @@ jobs:
 
   mutation-test:
     runs-on: ubuntu-latest
-    needs: [playwright]
+    needs: [test-e2e]
     if: github.ref == 'refs/heads/main'
     env:
       STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
@@ -116,7 +108,7 @@ jobs:
       - run: pnpm --filter api run test:mutate
 
   build-api:
-    needs: [playwright]
+    needs: [test-e2e]
     if: github.ref == 'refs/heads/main'
     uses: jbrunton/workflows/.github/workflows/build-image.yml@develop
     with:
