--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
           path: e2e/playwright-report/
           retention-days: 1
 
-  mutation-test:
+  test-mutation:
     runs-on: ubuntu-latest
     needs: [test-e2e]
     if: github.ref == 'refs/heads/main'
