--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
 
   test-mutate:
     runs-on: ubuntu-latest
-    needs: [test-e2e]
+    # needs: [test-e2e]
     # if: github.ref == 'refs/heads/main'
     env:
       STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
@@ -109,7 +109,7 @@ jobs:
 
   test-mutate-data:
     runs-on: ubuntu-latest
-    needs: [test-e2e]
+    # needs: [test-e2e]
     # if: github.ref == 'refs/heads/main'
     env:
       STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
@@ -118,7 +118,7 @@ jobs:
       - uses: pnpm/action-setup@v4
       - uses: rrainn/dynamodb-action@v2.0.1
         with:
-          port: 8000
+          port: 8001
       - run: pnpm --filter api install
       - run: pnpm run --filter api db:init
       - run: pnpm --filter api run test:mutate:data
