refactor: build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,9 +119,8 @@ jobs:
       - uses: rrainn/dynamodb-action@v2.0.1
         with:
           port: 8001
-      - run: |
-          pnpm --filter api install
-          pnpm --filter api db:test:init
+      - run: pnpm --filter api install
+      - run: pnpm run --filter api db:test:init
       - run: pnpm --filter api run test:mutate:data
 
   build-api:
