--- a/services/api/package.json
+++ b/services/api/package.json
@@ -18,6 +18,7 @@
     "start:debug": "NODE_ENV=development nest start --debug --watch",
     "db:init": "NODE_ENV=development ts-node ./scripts/db/init.ts",
     "db:drop": "NODE_ENV=development ts-node ./scripts/db/drop.ts",
+    "db:test:init": "NODE_ENV=test ts-node ./scripts/db/init.ts",
     "db:test:drop": "NODE_ENV=test ts-node ./scripts/db/drop.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --max-warnings 0",
     "test": "jest",
@@ -25,7 +26,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:mutate": "stryker run",
-    "test:mutate:data": "stryker run stryker.data.conf.mjs",
+    "test:mutate:data": "NODE_ENV=test SKIP_DB_SETUP=true stryker run stryker.data.conf.mjs",
     "test:int": "jest --config ./test/jest-e2e.config.cjs",
     "docs:generate": "typedoc",
     "docs:serve": "http-server docs"
