chore: db:reset command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:e2e": "pnpm run --filter e2e test:e2e",
     "test:e2e:ui": "pnpm run --filter e2e test:e2e:ui",
     "build": "turbo build",
-    "dev": "turbo dev"
+    "dev": "turbo dev",
+    "dev:setup": "turbo dev:setup",
+    "dev:teardown": "turbo dev:teardown"
   },
   "devDependencies": {
     "husky": "^8.0.2",
