--- a/services/api/package.json
+++ b/services/api/package.json
@@ -15,9 +15,12 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main",
     "dev": "NODE_ENV=development nest start --watch",
+    "dev:setup": "pnpm db:reset",
+    "dev:teardown": "pnpm db:drop",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
     "db:init": "NODE_ENV=development ts-node ./scripts/db/init.ts",
     "db:drop": "NODE_ENV=development ts-node ./scripts/db/drop.ts",
+    "db:reset": "NODE_ENV=development ts-node ./scripts/db/reset.ts",
     "db:test:init": "NODE_ENV=test ts-node ./scripts/db/init.ts",
     "db:test:drop": "NODE_ENV=test ts-node ./scripts/db/drop.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --max-warnings 0",
