--- a/turbo.json
+++ b/turbo.json
@@ -5,18 +5,21 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
-    "lint": {},
-    "test": {},
-    "test:int": {},
-    "dev:setup": {
+    "lint": {
       "cache": false
     },
-    "dev:teardown": {
+    "test": {
+      "cache": false
+    },
+    "test:int": {
       "cache": false
     },
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "dev:setup": {
+      "cache": false
     }
   }
 }
