--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "@chakra-ui/react": "2.4.6",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@tanstack/react-query": "^4.20.4",
+    "@tanstack/react-query": "5.53.1",
     "axios": "1.3.4",
     "date-fns": "2.29.3",
     "debug": "4.3.4",
