--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,14 @@ jobs:
       - run: pnpm install
       - run: pnpm run lint
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v4
+      - run: pnpm install
+      - run: pnpm run build
+
   test:
     runs-on: ubuntu-latest
     steps:
@@ -48,7 +56,7 @@ jobs:
       - run: pnpm run test:int
 
   test-e2e:
-    needs: [lint, test, test-int, pulumi]
+    needs: [lint, build, test, test-int, pulumi]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
