--- a/e2e/package.json
+++ b/e2e/package.json
@@ -6,7 +6,8 @@
   "packageManager": "pnpm@9.8.0",
   "scripts": {
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:setup": "node scripts/setup-env"
   },
   "keywords": [],
   "author": "",
