--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "packageManager": "pnpm@9.8.0",
   "scripts": {
@@ -58,7 +58,7 @@
     "jsdom": "22.1.0",
     "msw": "1.3.2",
     "prettier": "2.8.1",
-    "typescript": "^4.9.3",
+    "typescript": "5.5.4",
     "vite": "^4.0.0",
     "vitest": "0.33.0"
   }
