--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "1.12.0",
-    "@chakra-ui/react": "2.4.6",
+    "@chakra-ui/react": "2.8.2",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@tanstack/react-query": "5.53.1",
@@ -49,7 +49,7 @@
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "5.47.1",
     "@typescript-eslint/parser": "5.47.1",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react": "4.3.1",
     "eslint": "8.30.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
