--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base", "group:allNonMajor"],
-  "prConcurrentLimit": 3
+  "packageRules": [
+    {
+      "matchFileNames": ["pulumi/**"],
+      "groupName": "pulumi"
+    }
+  ],
+  "prConcurrentLimit": 3,
 }
