--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "group:allNonMajor"],
+  "extends": ["config:base", "group:allNonMajor", "default:automergeAll"],
   "packageRules": [
     {
       "matchFileNames": ["pulumi/**"],
-      "groupName": "pulumi"
+      "groupName": "pulumi",
+      "extends": ["config:base", "group:allNonMajor"]
     }
   ],
-  "prConcurrentLimit": 3,
+  "prConcurrentLimit": 3
 }
