chore: update additionalBranchPrefix

--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,8 @@
     {
       "matchFileNames": ["pulumi/**"],
       "groupName": "pulumi",
-      "extends": ["config:base", "group:allNonMajor"]
+      "extends": ["config:base", "group:allNonMajor"],
+      "additionalBranchPrefix": "pulumi-"
     }
   ],
   "branchPrefix": "renovate-",
