--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "isolate": "npx isolate-package isolate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main",
     "dev": "NODE_ENV=development nest start --watch",
@@ -89,6 +90,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "http-server": "14.1.1",
+    "isolate-package": "1.19.0",
     "jest": "29.7.0",
     "jest-fail-on-console": "3.1.1",
     "jest-mock-extended": "3.0.7",
