--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,6 @@
   ],
   "branchPrefix": "renovate-",
   "prConcurrentLimit": 3,
-  "automerge": true,
+  "automerge": false,
   "automergeSchedule": "before 9:00am"
 }
