--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,7 +144,7 @@ jobs:
   build-api:
     needs: [test-e2e]
     if: github.ref == 'refs/heads/main'
-    uses: jbrunton/workflows/.github/workflows/build-image.yml@develop
+    uses: jbrunton/workflows/.github/workflows/build-image.yml@gcr-builder
     with:
       repo-name: jbrunton/chat-demo-api
       build-directory: services/api/isolate
@@ -152,11 +152,10 @@ jobs:
         pnpm install
         pnpm --filter api build
         pnpm --filter api isolate
-      buildpack: heroku/nodejs
       node-version-file: "package.json"
       publish: true
       docker-username: jbrunton
-      cache-image: jbrunton/chat-demo-api-cache-image:latest
+      cache-image: jbrunton/chat-demo-api-cache-image:gcr-builder
     secrets:
       docker-access-token: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
