--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -26,7 +26,6 @@ jobs:
     environment:
       name: Development
       url: https://chat-demo-${{ github.head_ref || github.ref_name }}.dev.jbrunton-aws.com
-    needs: [build-api]
     runs-on: ubuntu-latest
     outputs:
       service: ${{ steps.pulumi-outputs.outputs.service }}
@@ -67,7 +66,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-1
-          API_TAG: ${{ needs.build-api.outputs.tag }}
+          API_TAG: latest
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get pulumi outputs
@@ -93,4 +92,4 @@ jobs:
       container-name: chat-demo-api
     secrets:
       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      aws-secret-access-key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
